REQ[#62082]: 启动脚本增加内存限制和GC日志
[Description]: 1. 启动脚本增加内存限制和GC日志
[Root Cause]:
[Solution]:
[Test Suggestion]: